fix: backdrop naming and alignment

--- a/styles.css
+++ b/styles.css
@@ -21,18 +21,6 @@ p {
 	backdrop-filter: blur(1em);
 }
 
-.backdrop {
-	background-image: url("assets/backdrop.png");
-	background-size: cover;
-	background-position: center;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-}
-
 .navbar-container {
 	display: flex;
 	justify-content: center;
@@ -136,7 +124,7 @@ p {
 .backdrop-personal {
 	background-image: url("assets/backdrop-personal.png");
 	background-size: cover;
-	background-position: top left;
+	background-position: top right;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -223,6 +211,18 @@ p {
 }
 
 /* Projects */
+
+.backdrop-projects {
+	background-image: url("assets/backdrop-projects.png");
+	background-size: cover;
+	background-position: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
 
 .hero {
 	display: flex;
